Closed Bug 379878 Opened 19 years ago Closed 19 years ago

Querying value of progress bar in downloads dialog reliably crashes Firefox

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: jdiggs, Assigned: aaronlev)

References

(Blocks 1 open bug)

Details

(Keywords: access, crash)

Attachments

(1 file, 1 obsolete file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a5pre) Gecko/20070506 Minefield/3.0a5pre Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a5pre) Gecko/20070506 Minefield/3.0a5pre If you use Accerciser to query the value of the progress bar in the downloads dialog, Firefox crashes 100% of the time. Reproducible: Always Steps to Reproduce: 1. Launch Accerciser 2. Start a download (I chose the latest nightly build of Firefox) 3. In Accerciser, browse in the hierarchy to locate the progress bar. With it selected: 4. Choose the API Browser tab. Near the bottom of the pane, locate the combo box that (likely) says "Accessible" and choose value. Actual Results: Firefox crashes. Expected Results: Firefox wouldn't crash. :-)
Blocks: orca
Keywords: access
Do you have a stacktrace for the crash?
Severity: normal → critical
Keywords: crash
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
That patch is necessary but doesn't fix this bug unfortunately. In fact when I crash it makes the whole desktop hang for me. Joanie, does your desktop hang with this crash?
No desktop hang here, but I'm on the newest accerciser 0.1.2 from trunk. Hang could be an accerciser bug.
Sorry, should have added that I do see the crash. Just not the hang. :)
Latest Accerciser here as well and I too get the crash but not the hang. But I don't think it's Accerciser: Will mentioned that accessing the progress bar via Orca crashed Firefox as well.
Attachment #264143 - Attachment is obsolete: true
Attachment #264167 - Flags: review?(ginn.chen)
Comment on attachment 264167 [details] [diff] [review] Fixes crash and other issues with progress meter support of value interface oops, I felt guilty.
Attachment #264167 - Flags: review?(ginn.chen) → review+
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: