Bug 379878. Fix crashes and accessible value interface support for XUL progress meter. r=ginn.chen