accessible/src/atk/nsMaiInterfaceValue.cpp
@@ -130,7 +130,7 @@ getMinimumIncrementCB(AtkValue *obj, GValue *minimumIncrement)
     if (!accValue)
         return;
 
-    memset (accValue,  0, sizeof (GValue));
+    memset (minimumIncrement,  0, sizeof (GValue));
     double accDouble;
     if (NS_FAILED(accValue->GetMinimumIncrement(&accDouble)))
         return;
